--- a/functions/views/admin_edit_funwork.ejs
+++ b/functions/views/admin_edit_funwork.ejs
@@ -399,48 +399,26 @@
                 }else if(action == 'edit'){
                     nama = namaTxt.val();
                     keterangan = keteranganTxt.val();                                
-                    if(funworkImg.val() != ""){
-                        namaFoto = nama + '.' + typeFoto;
-                    }
+                   
                        
-                    db.ref('/funwork/' + dataId).set({
-                    nama : nama,
-                    keterangan : keterangan,
-                    foto : namaFoto
-                    }, function(error) {
-                        if (error) {
-                            // The write failed...
-                        alert('Terjadi Kesalahan !');
-                        } else {
-                            // Data saved successfully!
+                    db.ref('/funwork/' + dataId + '/nama').set(
+                        nama, 
+                        function(error) {
+                        if (error) {                            
+                            alert('Terjadi Kesalahan !');
+                        } else {   
+
+                            db.ref('/funwork/' + dataId + '/keterangan').set(
+                                keterangan, 
+                                function(error) {
+                                if (error) {                            
+                                    alert('Terjadi Kesalahan !');
+                                } else {  
+                                    alert('Data berhasil disimpan !');
+                                    location.href="/admin_edit_funwork";                            
+                                }
                             
-                            
-                            if(funworkImg.val() != ""){
-                                
-                                let storageRef = storage.ref('funwork/'+namaFoto);
-                                let uploadTask = storageRef.put(foto);
-
-                                uploadTask.on('state_changed',
-
-                                    function progress(snapshot){
-                                        let percentage = (snapshot.bytesTransferred / snapshot.totalBytes) *100;
-                                        uploaderProg.val(percentage);
-
-                                    },
-                                    function error(err){
-                                        alert('Terjadi Kesalahan !');
-                                    },
-
-                                    function complete(){
-                                        alert('Data berhasil disimpan !');
-                                        location.href="/admin_edit_funwork";
-                                    }
-                                );
-                            }else{
-                                alert('Data berhasil disimpan !');
-                                location.href="/admin_edit_funwork";
-                            }
-                        
+                            });                                                                                                                                                
                         }
                         
                     }); 
