--- a/functions/views/funwork.ejs
+++ b/functions/views/funwork.ejs
@@ -11,7 +11,7 @@
 <body>
     <style>
     .carousel-inner > .carousel-item {
-        height: 40vh;
+        height: 80vh;
     }
 
     .carousel-inner > .carousel-item > img {
@@ -21,7 +21,7 @@
         -webkit-transform: translate(-50%, -50%);
         -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
-        max-height: 400px;
+        max-height: 800px;
         width: auto;
     }
 
@@ -47,7 +47,7 @@
                     <div class="row pt-5">
                         <div class="col-md-8">
                                 <% if (data.foto !== "") { %>
-                                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                                    <div id="<%= isi.key %>" class="carousel slide" data-ride="carousel">
                                        
                                         <div class="carousel-inner">
                                             <% for(var i = 0; i < data.foto.length; i++) { var obj = data.foto[i]; if (obj !== undefined){ %>
@@ -60,11 +60,11 @@
                                             
                                            
                                         </div>
-                                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                                        <a class="carousel-control-prev" href="#<%= isi.key %>" role="button" data-slide="prev">
                                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                             <span class="sr-only">Previous</span>
                                         </a>
-                                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                                        <a class="carousel-control-next" href="#<%= isi.key %>" role="button" data-slide="next">
                                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                             <span class="sr-only">Next</span>
                                         </a>
