--- a/functions/views/templates/header.ejs
+++ b/functions/views/templates/header.ejs
@@ -1,7 +1,7 @@
 <!-- Header Section -->
 <header id="navbar" class="container-fluid" style="transition: .5s ease;">
     <div class="logo site-heading text-center d-none d-lg-block">
-        <a href="/"><img id="logo" style="max-width: 300px;" class="ml-3 site-logo pt-3" src="<% if (page === 'Workdetail') { %>../<% } %>img/logo.png" ></a>
+        <a href="/"><img id="logo" style="max-width: 300px;" class="ml-5 site-logo pt-3" src="<% if (page === 'Workdetail') { %>../<% } %>img/logo.png" ></a>
     </div>
         
     <nav  class="navbar navbar-expand-lg navbar-light bg-white container">
@@ -44,9 +44,9 @@
     
     function myFunction() {
         logo.classList.remove("mt-3") ;  
-        console.log("position : " + window.pageYOffset);
+        //console.log("position : " + window.pageYOffset);
         
-      if (window.pageYOffset > sticky) {
+      if (window.pageYOffset > sticky + 220) {
         navbar.classList.add("sticky")
         navbar.classList.remove("mt-3")             
         menu.classList.add("ml-auto");
