--- a/functions/views/work.ejs
+++ b/functions/views/work.ejs
@@ -23,7 +23,7 @@
                             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 nopadding">
                                 <div class="workgambar">                   
                                         <a href="/workdetail/<%= isi.key %>">
-                                            <img alt="<%= data.nama %>" class="img-fluid img-responsive workimage nopadding" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/work%2F<%= data.foto %>?alt=media">
+                                            <img alt="<%= data.nama %>" class="img-fluid img-responsive workimage nopadding" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/work%2F<%= isi.key %>%2F<%= data.foto %>?alt=media">
                                             
                                             <div class="overlay">
                                                 <h3 class="textwork ml-2"><%= data.nama %></h3>
