--- a/functions/views/workdetail.ejs
+++ b/functions/views/workdetail.ejs
@@ -19,7 +19,7 @@
                     <!-- Project One -->
                     <div class="row pt-5">
                         <div class="col-md-8">
-                            <img width="100%" height="50%" class="img-fluid rounded mb-3 mb-md-0" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/work%2F<%= workdetail.foto %>?alt=media" alt="<%= workdetail.nama %>" >
+                            <img width="100%" height="50%" class="img-fluid rounded mb-3 mb-md-0" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/work%2F<%= key %>%2F<%= workdetail.foto %>?alt=media" alt="<%= workdetail.nama %>" >
                         </div>
                         <div class="col-md-4">
                             <h3 class="reds" style="color:black"><%= workdetail.nama %></h3>
