--- a/functions/views/index.ejs
+++ b/functions/views/index.ejs
@@ -25,7 +25,7 @@
                  
                 <div class="col-12 mb-0 homegambar nopadding">                   
                     <a href="/workdetail/<%= isi.key %>">
-                        <img class="img-fluid img-responsive gmbr" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/work%2F<%= data.foto %>?alt=media" alt="<%= data.nama %>">
+                        <img class="img-fluid img-responsive gmbr" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/work%2F<%= isi.key %>%2F<%= data.foto %>?alt=media" alt="<%= data.nama %>">
                     
                         <div class="overlay">
                             <h3 class="text ml-2"><%= data.nama %></h3>
