--- a/functions/views/workdetail.ejs
+++ b/functions/views/workdetail.ejs
@@ -26,10 +26,27 @@
                             <p><%= workdetail.keterangan %></p>
                         </div>
                     </div>
+                    <% var extra = workdetail.tambahan; console.log(extra) %>
+                    <% Object.keys(extra).forEach(function(key_) { var val = extra[key_];%>
+                        <div class="row pt-5">
+                            <div class="col-md-8">
+                                <% if (val.foto !== "") {%>
+                                    <img  alt="<%= val.foto %>" width="100%" height="50%" class="img-fluid rounded mb-3 mb-md-0" s src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/work%2F<%= key %>%2F<%= val.foto %>?alt=media">
+                                    <br>
+                                <% } else {%>
+                                    <p>Tidak Ada Foto</p>
+                                <% } %>
+                            </div>
+                            <div class="col-md-4">
+                                
+                                <p><%= val.deskripsi %></p>
+                            </div>
+                        </div>
+                    <%});%>
     
                    
                 </div>
-            </div>
+        </div>
             <!-- Content End -->
 
         <!-- Footer Section -->
